--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ serde_json = "^1"
 metrics-exporter-prometheus = "^0.12"
 serde = { version = "^1", features = ["derive"]}
 tokio = { version = "^1.25", features = ["full"] }
+axum-server = { version = "^0.5", features = ["tls-rustls"] }
 tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
 clap = { version = "^4.3", features = ["env", "derive", "default"] }
 axum = { version = "^0.6", features = ["http2", "macros", "headers", "tracing"] }
