--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ anyhow = "^1"
 tracing = "^0.1"
 metrics = "^0.21"
 serde_json = "^1"
+regex-lite = "^0.1"
 metrics-exporter-prometheus = "^0.12"
 serde = { version = "^1", features = ["derive"]}
 tokio = { version = "^1.25", features = ["full"] }
